--- a/produtos.html
+++ b/produtos.html
@@ -9,15 +9,16 @@
 	</head>
 	<body>
 		<header>
+			<div class="caixa">
 			<h1><img src="logo.png"></h1>
-
-			<nav>
-				<ul>
-					<li><a href="index.html">Home</a></li>
-					<li><a href="produtos.html">Produtos</a></li>
-					<li><a href="contatos.html">Contato</a></li>
-				</ul>
-			</nav>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contatos.html">Contato</a></li>
+					</ul>
+				</nav>
+			</div>
 		</header>
 	</body>
 </html>
