--- a/contato.html
+++ b/contato.html
@@ -16,16 +16,25 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="produtos.html">Produtos</a></li>
-						<li><a href="contatos.html">Contato</a></li>
+						<li><a href="contato.html">Contato</a></li>
 					</ul>
 				</nav>
 			</div>
 		</header>
 
 		<main>
-			
+			<form>
+				<label for="nomesobrenome">Nome e sobrenome</label>
+				<input type="text" id="nomesobrenome">
 
-		
+				<label for="email">E-mail</label>
+				<input type="text" id="email">
+
+				<label for="telefone">Telefone</label>
+				<input type="text" id="telefone">
+
+				<input type="submit" value="Enviar formulário">
+			</form>
 		</main>
 		
 		<footer>
