--- a/contato.html
+++ b/contato.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
 		<title>Contato - Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
 	</head>
+	
 	<body>
 		<header>
 			<div class="caixa">
