--- a/produtos.html
+++ b/produtos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
+<html lang="pt-br">
 
-<html>
 	<head>
 		<meta charset="UTF-8">
 		<title>Produtos - Barbearia Alura</title>
@@ -11,7 +11,6 @@
 		<header>
 			<div class="caixa">
 				<h1><img src="logo.png"></h1>
-
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
