Configurando o botão de enviar

--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
 	</head>
-	
+
 	<body>
 		<header>
 			<div class="caixa">
@@ -57,7 +57,7 @@
 				</fieldset>
 
 				<label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
-				<input type="submit" value="Enviar formulário">
+				<input type="submit" value="Enviar formulário" class="enviar">
 
 			</form>
 		</main>
