--- a/contato.html
+++ b/contato.html
@@ -60,6 +60,32 @@
 				<input type="submit" value="Enviar formulário" class="enviar">
 
 			</form>
+
+			<table>
+				<thead>
+					<tr>
+						<th>Dia</th>
+						<th>Horário</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Segunda</td>
+						<td>8:00 às 20:00</td>
+					</tr>
+					<tr>
+						<td>Quarta</td>
+						<td>8:00 às 20:00</td>
+					</tr>
+					<tr>
+						<td>Sexta</td>
+						<td>8:00 às 20:00</td>
+					</tr>
+					<tr>
+					    <td colspan="5">Não abrimos aos finais de semana!</td> 
+					</tr>
+				</tbody>
+			</table>
 		</main>
 		
 		<footer>
